--- a/scss/bootstrap-night.scss
+++ b/scss/bootstrap-night.scss
@@ -14,7 +14,7 @@
 @import "functions";
 @import "variables";  // defaults are here
 @import "variables-alt";  // dark color set is here
-@import "dark/variables-map-back";  // map the `-alt`'s back to core colors
+@import "dark/variables-map-alt-to-core";  // map the `-alt`'s back to core colors
 @import "mixins";
 @import "utilities";
 
