--- a/scss/dark/_variables-map-alt-to-core.scss
+++ b/scss/dark/_variables-map-alt-to-core.scss
@@ -303,6 +303,10 @@ $modal-backdrop-bg:                           $modal-backdrop-bg-alt;
 $modal-backdrop-opacity:                      $modal-backdrop-opacity-alt;
 $modal-header-border-color:                   $modal-header-border-color-alt;
 $modal-footer-border-color:                   $modal-footer-border-color-alt;
+// --- Alerts ---
+$alert-bg-scale:                              $alert-bg-scale-alt;
+$alert-border-scale:                          $alert-border-scale-alt;
+$alert-color-scale:                           $alert-color-scale-alt;
 // --- Progress bars ---
 $progress-bg:                                 $progress-bg-alt;
 $progress-box-shadow:                         $progress-box-shadow-alt;
@@ -312,6 +316,8 @@ $progress-bar-bg:                             $progress-bar-bg-alt;
 $list-group-color:                            $list-group-color-alt;
 $list-group-bg:                               $list-group-bg-alt;
 $list-group-border-color:                     $list-group-border-color-alt;
+$list-group-item-bg-scale:                    $list-group-item-bg-scale-alt;
+$list-group-item-color-scale:                 $list-group-item-color-scale-alt;
 $list-group-hover-bg:                         $list-group-hover-bg-alt;
 $list-group-active-color:                     $list-group-active-color-alt;
 $list-group-active-bg:                        $list-group-active-bg-alt;
@@ -363,4 +369,4 @@ $pre-color:                                   $pre-color-alt;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Mon Jan 18 2021 13:51:24 GMT+1100 (Australian Eastern Daylight Time)
+// Generated: Mon Jan 18 2021 20:43:20 GMT+1100 (Australian Eastern Daylight Time)
