--- a/scss/dark/_variables-map-alt-to-core.scss
+++ b/scss/dark/_variables-map-alt-to-core.scss
@@ -44,7 +44,7 @@ $min-contrast-ratio:                          $min-contrast-ratio-alt;
 $color-contrast-dark:                         $color-contrast-dark-alt;
 $color-contrast-light:                        $color-contrast-light-alt;
 // --- Gradient ---
-// $gradient
+$gradient:                                    $gradient-alt;
 // --- Body ---
 $body-bg:                                     $body-bg-alt;
 $body-color:                                  $body-color-alt;
