--- a/tests/cheatsheet.css
+++ b/tests/cheatsheet.css
@@ -166,8 +166,15 @@ body {
     z-index: -1;
     content: "";
 
-    /* background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1) calc(100% - 3rem), rgba(255, 255, 255, .01)); */
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1) calc(100% - 3rem), rgba(255, 255, 255, .01));
   }
+
+  @media (prefers-color-scheme: dark) {
+    .bd-cheatsheet section > h2::before {
+      background-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) calc(100% - 3rem), rgba(0, 0, 0, .01));
+    }
+  }
+
 
   .bd-cheatsheet article,
   .bd-cheatsheet .bd-heading {
