initial release of bootstrap-dark.css

--- a/scss/_variables-alt.scss
+++ b/scss/_variables-alt.scss
@@ -652,3 +652,12 @@ $kbd-color-alt:                         $gray-100-alt !default;
 $kbd-bg-alt:                            $gray-800-alt !default;
 
 $pre-color-alt:                         $gray-100-alt !default;
+
+
+// Unique to Dark!!
+// **************************************
+// Text Selection
+// ______________________________________
+
+$selection-color-alt:                       $gray-200-alt !default;
+$selection-bg-alt:                          rgba($cyan-alt, .5) !default;
