--- a/scss/dark/_reboot.scss
+++ b/scss/dark/_reboot.scss
@@ -1,4 +1,4 @@
-// stylelint-disable declaration-no-important, selector-no-qualifying-type, property-no-vendor-prefix
+// xxxstylelint-disable declaration-no-important, selector-no-qualifying-type, property-no-vendor-prefix
 
 
 // Reboot
@@ -8,11 +8,6 @@
 
 
 // Body
-//
-// 1. Remove the margin in all browsers.
-// 2. As a best practice, apply a default `background-color`.
-// 3. Prevent adjustments of font size after orientation changes in iOS.
-// 4. Change the default tap highlight to be completely transparent in iOS.
 
 body {
   color: $body-color-alt;
@@ -21,9 +16,6 @@ body {
 
 
 // Content grouping
-//
-// 1. Reset Firefox's gray color
-// 2. Set correct height and prevent the `size` attribute to make the `hr` look like an input field
 
 hr {
   color: $hr-color-alt; // 1
@@ -33,10 +25,6 @@ hr {
 
 
 // Typography
-//
-// 1. Remove top margins from headings
-//    By default, `<h1>`-`<h6>` all receive top and bottom margins. We nuke the top
-//    margin for easier control within type scales as it avoids margin collapsing.
 
 %heading {
   color: $headings-color-alt;
@@ -53,10 +41,10 @@ mark {
 // Links
 
 a {
-  color: $link-color;
+  color: $link-color-alt;
 
   &:hover {
-    color: $link-hover-color;
+    color: $link-hover-color-alt;
   }
 }
 
