--- a/scss/dark/_mixins.scss
+++ b/scss/dark/_mixins.scss
@@ -1,2 +1,3 @@
-@import "./mixins/color-scheme";
-@import "./mixins/forms";
+@import "mixins/color-scheme";
+@import "mixins/buttons";
+@import "mixins/forms";
