--- a/scss/dark/mixins/_forms.scss
+++ b/scss/dark/mixins/_forms.scss
@@ -3,7 +3,7 @@
   $state,
   $color,
   $icon,
-  $tooltip-color: color-contrast($color),
+  $tooltip-color: color-contrast($color, $color-contrast-dark-alt, $color-contrast-light-alt, $min-contrast-ratio-alt),
   $tooltip-bg-color: rgba($color, $form-feedback-tooltip-opacity-alt),
   $focus-box-shadow: 0 0 0 $input-focus-width rgba($color, $input-btn-focus-color-opacity-alt)
 ) {
