--- a/scss/dark/_list-group.scss
+++ b/scss/dark/_list-group.scss
@@ -43,7 +43,7 @@
   $list-group-background: shift-color($value, $list-group-item-bg-scale-alt);
   $list-group-color: shift-color($value, $list-group-item-color-scale-alt);
   @if (contrast-ratio($list-group-background, $list-group-color) < $min-contrast-ratio-alt) {
-    $list-group-color: mix($value, color-contrast($list-group-background), abs($alert-color-scale-alt));
+    $list-group-color: mix($value, color-contrast($list-group-background, $color-contrast-dark-alt, $color-contrast-light-alt, $min-contrast-ratio-alt), abs($alert-color-scale-alt));
   }
 
   @include list-group-item-variant($state, $list-group-background, $list-group-color);
