fix for table-variants-alt

--- a/scss/dark/_tables.scss
+++ b/scss/dark/_tables.scss
@@ -61,5 +61,5 @@
 // Table variants
 
 @each $color, $value in $table-variants-alt {
-  @include table-variant($color, $value);
+  @include table-variant-alt($color, $value);
 }
