--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -46,6 +46,14 @@
 // Helpers
 @import "helpers";
 
+// missing from BS, unsupported patch/hack
+// ---------------------------------------------------------------------------
+:root { --bs-black: #{$black}; }
+.text-black { color: $black if($enable-important-utilities, !important, null); }
+.bg-black { background-color: $black if($enable-important-utilities, !important, null); }
+.border-black { border-color: $black if($enable-important-utilities, !important, null); }
+// ---------------------------------------------------------------------------
+
 // Utilities
 @import "utilities/api";
 // scss-docs-end import-stack
