--- a/scss/bootstrap-dark.scss
+++ b/scss/bootstrap-dark.scss
@@ -10,16 +10,6 @@
  * elements optioned in by a `prefers-color-scheme: dark` media query
  */
 
-/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
- * !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
- * !!!                                                                      !!!
- * !!!    DON'T USE!  NOT READY YET!  (WIP (Work In Progress))              !!!
- * !!!                                                                      !!!
- * !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
- * !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
-
-
-// scss-docs-start import-stack
 // Configuration
 @import "functions";
 @import "variables";  // defaults are here
@@ -64,14 +54,16 @@
 // Helpers
 @import "helpers";
 
-// missing from BS, unsupported patch
+// missing from BS, unsupported patch/hack
+// ---------------------------------------------------------------------------
+:root { --bs-black: #{$black}; }
 .text-black { color: $black if($enable-important-utilities, !important, null); }
 .bg-black { background-color: $black if($enable-important-utilities, !important, null); }
 .border-black { border-color: $black if($enable-important-utilities, !important, null); }
+// ---------------------------------------------------------------------------
 
 // Utilities
 @import "utilities/api";
-
 
 /*
  * ---------- Dark Mode ------------------------------------------------------
@@ -79,25 +71,17 @@
 
 @include prefers-color-scheme("dark") {
 
-  // xstylelint-disable no-duplicate-at-import-rules
-
   // Layout & components
   @import "dark/root";
   @import "dark/reboot";
   @import "dark/type";
   @import "dark/images";
-  // @import "dark/containers";  // no colors here
-  // @import "dark/grid";  // no colors here
+  // no colors in containers
+  // no colors in grid
   @import "dark/tables";
-
-  /* vvvvvvvvvv WIP WIP WIP WIP WIP WIP WIP WIP WIP WIP WIP WIP vvvvvvvvvv */
-
   @import "dark/forms";
-
-  /* ^^^^^^^^^^ WIP WIP WIP WIP WIP WIP WIP WIP WIP WIP WIP WIP ^^^^^^^^^^ */
-
   @import "dark/buttons";
-  // @import "dark/transitions";  // no colors here
+  // no colors in transitions
   @import "dark/dropdown";
   @import "dark/button-group";
   @import "dark/nav";
@@ -116,7 +100,7 @@
   @import "dark/tooltip";
   @import "dark/popover";
   @import "dark/carousel";
-  // @import "dark/spinners";  // no colors here
+  // no colors in spinners
 
   // Helpers
   @import "dark/helpers";
@@ -126,8 +110,6 @@
 
   // Unique to dark-mode
   @import "dark/dark";
-
-  // xstylelint-enable no-duplicate-at-import-rules
 }
 
 // Additional Global Utilities
