--- a/tests/cheatsheet.css
+++ b/tests/cheatsheet.css
@@ -2,6 +2,19 @@ body {
   scroll-behavior: smooth;
 }
 
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
 /**
  * Bootstrap "Journal code" icon
  * @link https://icons.getbootstrap.com/icons/journal-code/
@@ -165,16 +178,7 @@ body {
     /* rtl:end:ignore */
     z-index: -1;
     content: "";
-
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 1) calc(100% - 3rem), rgba(255, 255, 255, .01));
   }
-
-  @media (prefers-color-scheme: dark) {
-    .bd-cheatsheet section > h2::before {
-      background-image: linear-gradient(to bottom, rgba(34, 34, 34, 1) calc(100% - 3rem), rgba(34, 34, 34, .01));
-    }
-  }
-
 
   .bd-cheatsheet article,
   .bd-cheatsheet .bd-heading {
